Some updated in html code

--- a/Task05_MVC/UserStore.WebUI/Views/Admin/Index.cshtml
+++ b/Task05_MVC/UserStore.WebUI/Views/Admin/Index.cshtml
@@ -5,22 +5,24 @@
     ViewBag.Title = "Index";
 }
 
-@Scripts.Render("~/scripts/jquery-1.10.2.min.js")
-@Scripts.Render("~/scripts/jquery.unobtrusive-ajax.min.js")
-
-<div class="btn btn-group">
-    <a class="btn btn-default" href="/Order/Index/">Orders</a>
-    <a class="btn btn-default" href="/Manager/Index/">Managers</a>
-    <a class="btn btn-default" href="/Product/Index/">Products</a>
-</div>
-
-@using (Ajax.BeginForm("UserSearch", new AjaxOptions { UpdateTargetId = "results" }))
+@using (Ajax.BeginForm("UserSearch", new AjaxOptions
+{
+    UpdateTargetId = "results",
+    LoadingElementId = "loading",
+    LoadingElementDuration = 500,
+    Confirm = "Execute AJAX-query?"
+}))
 {
     <div class="form-group">
-        <input type="text" name="name" class="form-control" />
-        <input type="submit" class="btn btn-default" value="Search" />
+        <label>User name</label>
+        <input type="text" name="name" class="form-control"/>
+        <input type="submit" class="btn btn-default" value="Search"/>
     </div>
 }
+
+<div id="loading" style="display: none; color: red; font-weight: bold">
+    <p>loading...</p>
+</div>
 
 <div id="results">
 </div>
