--- a/Task05_MVC/UserStore.WebUI/Views/Admin/UserSearch.cshtml
+++ b/Task05_MVC/UserStore.WebUI/Views/Admin/UserSearch.cshtml
@@ -1,30 +1,36 @@
 ﻿@model IEnumerable<UserStore.BLL.DTO.UserDto>
 
-<table class="table table-striped">
-    <tr>
-        <th>Id</th>
-        <th>Name</th>
-        <th>Role</th>
-        <th></th>
-        <th></th>
-    </tr>
-    @if (!Model.Any())
-    {
+<h2>Results:</h2>
+<div class="panel panel-primary">
+    <div class="panel-heading">
+        Founded users
+    </div>
+    <table class="table table-striped">
         <tr>
-            <td colspan="3" class="text-center">There are no users accounts</td>
+            <th>Id</th>
+            <th>Name</th>
+            <th>Role</th>
+            <th></th>
+            <th></th>
         </tr>
-    }
-    else
-    {
-        foreach (var user in ViewBag.Users)
+        @if (!Model.Any())
         {
             <tr>
-                <td>@user.Id</td>
-                <td>@user.Name</td>
-                <td>@user.Role</td>
-                <td><p><a class="btn btn-default" href="/Admin/Edit/@user.Id">Edit</a></p></td>
-                <td><p><a class="btn btn-default" href="/Admin/Delete/@user.Id">Delete</a></p></td>
+                <td colspan="3" class="text-center">There are no users accounts</td>
             </tr>
         }
-    }
-</table>
+        else
+        {
+            foreach (var user in ViewBag.Users)
+            {
+                <tr>
+                    <td>@user.Id</td>
+                    <td>@user.Name</td>
+                    <td>@user.Role</td>
+                    <td><p><a class="btn btn-default" href="/Admin/Edit/@user.Id">Edit</a></p></td>
+                    <td><p><a class="btn btn-default" href="/Admin/Delete/@user.Id">Delete</a></p></td>
+                </tr>
+            }
+        }
+    </table>
+</div>
