--- a/Task05_MVC/UserStore.WebUI/Views/Manager/ManagerSearch.cshtml
+++ b/Task05_MVC/UserStore.WebUI/Views/Manager/ManagerSearch.cshtml
@@ -1,31 +1,38 @@
 ﻿@model IEnumerable<UserStore.BLL.DTO.ManagerDto>
     
-<div id="searchResults">
-    <h2>Results:</h2>
-    <table class="table table-striped">
-        <tr>
-            <th>Manager Id</th>
-            <th>Manager name</th>
-            <th></th>
-            <th></th>
-        </tr>
-        @if (!Model.Any())
-        {
+<h2>Results:</h2>
+<div class="panel panel-primary">
+    <div class="panel-heading">
+        Founded managers
+    </div>
+        <table class="table table-striped">
             <tr>
-                <td colspan="3" class="text-center">There are no managers</td>
+                <th>Manager Id</th>
+                <th>Manager name</th>
+                <th></th>
+                <th></th>
             </tr>
-        }
-        else
-        {
-            foreach (var manager in ViewBag.Managers)
+            @if (!Model.Any())
             {
                 <tr>
-                    <td>@manager.Id</td>
-                    <td>@manager.LastName</td>
-                    <td><p><a class="btn btn-default" href="/Manager/Edit/@manager.Id">Edit</a></p></td>
-                    <td><p><a class="btn btn-default" href="/Manager/Delete/@manager.Id">Delete</a></p></td>
+                    <td colspan="3" class="text-center">There are no managers</td>
                 </tr>
             }
-        }
-    </table>
+            else
+            {
+                foreach (var manager in ViewBag.Managers)
+                {
+                    <tr>
+                        <td>@manager.Id</td>
+                        <td>@manager.LastName</td>
+                        <td>
+                            <p><a class="btn btn-default" href="/Manager/Edit/@manager.Id">Edit</a>
+                            </p></td>
+                        <td>
+                            <p><a class="btn btn-default" href="/Manager/Delete/@manager.Id">Delete</a>
+                            </p></td>
+                    </tr>
+                }
+            }
+        </table>
 </div>
