--- a/Task05_MVC/UserStore.WebUI/Views/Manager/Index.cshtml
+++ b/Task05_MVC/UserStore.WebUI/Views/Manager/Index.cshtml
@@ -5,24 +5,27 @@
     ViewBag.Title = "Index";
 }
 
-@Scripts.Render("~/scripts/jquery-1.10.2.min.js")
-@Scripts.Render("~/scripts/jquery.unobtrusive-ajax.min.js")
+<a class="btn btn-success" href="/Manager/Create/">Create</a>
 
-<div class="btn btn-group">
-    <a class="btn btn-success" href="/Manager/Create/">Create</a>
-    <a class="btn btn-default" href="/Admin/Index/">Users</a>
-    <a class="btn btn-default" href="/Order/Index/">Orders</a>
-    <a class="btn btn-default" href="/Product/Index/">Products</a>
-</div>
+@using (Ajax.BeginForm("ManagerSearch", new AjaxOptions
+{
+    UpdateTargetId = "results",
+    LoadingElementId = "loading",
+    LoadingElementDuration = 500,
+    Confirm = "Execute AJAX-query?"
 
-@using (Ajax.BeginForm("ManagerSearch", new AjaxOptions { UpdateTargetId = "results" }))
+}))
 {
     <div class="form-group">
-        <label>Name</label>
+        <label>Manager name</label>
         <input type="text" name="name" class="form-control"/>
         <input type="submit" class="btn btn-default" value="Search"/>
     </div>
 }
+
+<div id="loading" style="display: none; color: red; font-weight: bold">
+    <p>loading...</p>
+</div>
 
 <div id="results">
 </div>
@@ -55,8 +58,8 @@
                 }
             }
         </table>
-    </div>
+</div>
 
-    Page @(Model.PageCount < Model.PageNumber ? 0 : Model.PageNumber) from @Model.PageCount
+Page @(Model.PageCount < Model.PageNumber ? 0 : Model.PageNumber) from @Model.PageCount
 
-    @Html.PagedListPager(Model, page => Url.Action("Index", new { page }))
+@Html.PagedListPager(Model, page => Url.Action("Index", new { page }))
