Views: added placeholders to textboxes. Updated HomeController

--- a/Task05_MVC/UserStore.WebUI/Views/Manager/Index.cshtml
+++ b/Task05_MVC/UserStore.WebUI/Views/Manager/Index.cshtml
@@ -17,8 +17,7 @@
 }))
 {
     <div class="form-group">
-        <label>Manager name</label>
-        <input type="text" name="name" class="form-control"/>
+        <input type="text" placeholder="Manager name" name="name" class="form-control"/>
         <input type="submit" class="btn btn-default" value="Search"/>
     </div>
 }
