--- a/Task05_MVC/UserStore.WebUI/Views/Admin/Index.cshtml
+++ b/Task05_MVC/UserStore.WebUI/Views/Admin/Index.cshtml
@@ -14,8 +14,7 @@
 }))
 {
     <div class="form-group">
-        <label>User name</label>
-        <input type="text" name="name" class="form-control"/>
+        <input type="text" placeholder="User name" name="name" class="form-control"/>
         <input type="submit" class="btn btn-default" value="Search"/>
     </div>
 }
