--- a/Task05_MVC/UserStore.WebUI/Views/Product/Index.cshtml
+++ b/Task05_MVC/UserStore.WebUI/Views/Product/Index.cshtml
@@ -16,8 +16,7 @@
 }))
 {
     <div class="form-group">
-        <label>Product name</label>
-        <input type="text" name="name" class="form-control"/>
+        <input type="text" placeholder="Product name" name="name" class="form-control"/>
         <input type="submit" class="btn btn-default" value="Search"/>
     </div>
 }
