--- a/Task05_MVC/UserStore.WebUI/Views/Home/Index.cshtml
+++ b/Task05_MVC/UserStore.WebUI/Views/Home/Index.cshtml
@@ -1,72 +1,39 @@
-﻿@model UserStore.WebUI.Models.OrderListViewModel
+﻿
 @{
-    ViewBag.Title = "List of orders";
+    ViewBag.Title = "Index";
 }
 
-<head>
-    <script type="text/javascript" src="https://www.gstatic.com/charts/loader.js"></script>
-    <script type="text/javascript">
-        google.charts.load('current', { 'packages': ['bar'] });
-
-        function onButtonClick() {
-            var actionUrl = '@Url.Action("GetManagersData", "Home")';
-            $.getJSON(actionUrl, drawChart);
-        }
-
-        function drawChart(response) {
-            var objs = [];
-            objs.push(['Manager', 'Orders count', 'Total price']);
-
-            for (var i = 0; i < response.length; i++) {
-                var obj = [response[i].Name, response[i].OrdersCount, response[i].TotalPrice];
-                objs.push(obj);
-            }
-
-            var data = google.visualization.arrayToDataTable(objs);
-
-            var options = {
-                chart: {
-                    title: 'Orders details',
-                    subtitle: 'Orders amount, Total price'
-                }
-            };
-
-            var chart = new google.charts.Bar(document.getElementById('columnchart_material'));
-
-            chart.draw(data, google.charts.Bar.convertOptions(options));
-        }
-    </script>
-</head>
-
-<input type="button" id="chartBuilder" class="btn btn-success" value="Build chart" onclick="onButtonClick()" />
-
-<form method="get">
-    <div class="form-group">
-        <label class="control-label">Manager:</label>
-        @Html.DropDownList("manager", Model.Managers,
-            new { @class = "form-control" })
-
-        <label class="control-label">Product:</label>
-        @Html.DropDownList("product", Model.Products,
-            new { @class = "form-control" })
-        
-        <label class="control-label">Date:</label>
-        @Html.DropDownList("date", Model.Dates,
-            new { @class = "form-control" })
-        
-        <label class="control-label">From value:</label>
-        @Html.TextBoxFor(x => x.FromValue, new {@type="number", @value="10", @min="0", @step="0.01", @class="form-control"})
-
-        <label class="control-label">To value:</label>
-        @Html.TextBoxFor(x => x.ToValue, new { @type = "number", @value = "200", @min = "0", @step = "0.01", @class = "form-control" })
+<div class="container">
+    <div class="jumbotron">
+        <h1>Managers System</h1>
+        <p>
+            This is a test website created by Arseni Barsegyan
+        </p>
     </div>
-    <input type="submit" value="Filter" class="btn btn-default"/>
-</form>
-
-@Html.Partial("OrdersSummary", Model.Orders)
-
-<div id="columnchart_material" style="width: 800px; height: 500px;"></div>
-
-<div id="results">
-
+    <div class="row">
+        <div class="col-md-4">
+            <h2>Orders</h2>
+            <img src="~/Images/OrdersIcon.png" alt="Order" height="150" width="150"/>
+            <p>
+                See our managers orders list
+            </p>
+            <p><a class="btn btn-default" href="/Home/Orders">Search &raquo;</a></p>
+        </div>
+        <div class="col-md-4">
+            <h2>Charts</h2>
+            <img src="~/Images/Chart.png" alt="Chart" height="150" width="250"/>
+            <p>
+                See our managers efficiency work
+            </p>
+            <p><a class="btn btn-default" href="/Home/Chart">View charts &raquo;</a></p>
+        </div>
+        <div class="col-md-4">
+            <h2>About project</h2>
+            <img src="~/Images/InfoIcon.png" alt="Info" height="150" width="150"/>
+            <p>
+                See more info about project
+            </p>
+            <p><a class="btn btn-default" href="/Home/Index">Learn more &raquo;</a></p>
+        </div>
+    </div>
 </div>
