--- a/Task05_MVC/UserStore.WebUI/Views/Home/OrdersSummary.cshtml
+++ b/Task05_MVC/UserStore.WebUI/Views/Home/OrdersSummary.cshtml
@@ -5,13 +5,12 @@
     ViewBag.Title = "Orders";
 }
 
-<table class="table table-striped">
+<table class="table table-bordered">
     <tr>
         <th>Manager name</th>
         <th>Product name</th>
         <th>Date</th>
         <th>Price</th>
-        <th></th>
     </tr>
 
     @foreach (var item in Model)
@@ -35,4 +34,4 @@
 
 Page @(Model.PageCount < Model.PageNumber ? 0 : Model.PageNumber) from @Model.PageCount
 
-@Html.PagedListPager(Model, page => Url.Action("Index", new { page }))
+@Html.PagedListPager(Model, page => Url.Action("Orders", new { page }))
