--- a/Task05_MVC/UserStore.WebUI/Views/Order/Index.cshtml
+++ b/Task05_MVC/UserStore.WebUI/Views/Order/Index.cshtml
@@ -2,7 +2,7 @@
 @using PagedList.Mvc;
 
 @{
-    ViewBag.Title = "Index";
+    ViewBag.Title = "Orders";
 }
 
 <a class="btn btn-success" href="/Order/Create/">Create</a>
