--- a/Task05_MVC/UserStore.WebUI/Views/Shared/_Layout.cshtml
+++ b/Task05_MVC/UserStore.WebUI/Views/Shared/_Layout.cshtml
@@ -36,10 +36,9 @@
         @RenderBody()
         <hr />
         <footer>
-            <p>&copy; @DateTime.Now.Year - Arseni Barsegyan</p>
+            <p>&copy; @DateTime.Now.Year - Arseni Barsegyan, EPAM training spring 2017</p>
         </footer>
     </div>
-
     @Scripts.Render("~/bundles/jquery")
     @Scripts.Render("~/bundles/bootstrap")
     @RenderSection("scripts", required: false)
