--- a/Task05_MVC/UserStore.WebUI/Views/Shared/_LoginPartial.cshtml
+++ b/Task05_MVC/UserStore.WebUI/Views/Shared/_LoginPartial.cshtml
@@ -8,7 +8,7 @@
 
         <ul class="nav navbar-nav navbar-right">
             <li>
-                @Html.ActionLink("Hello, " + User.Identity.GetUserName() + "!", "Index", "Admin", routeValues: null, htmlAttributes: new {title = "Manage"})
+                @Html.ActionLink("Hello, " + User.Identity.GetUserName() + "!", "Index", "Admin", null, new {title = "Manage"})
             </li>
             <li><a href="javascript:document.getElementById('logoutForm').submit()">Log out</a></li>
         </ul>
@@ -17,8 +17,8 @@
 else
 {
     <ul class="nav navbar-nav navbar-right">
-        <li>@Html.ActionLink("Register", "Register", "Account", routeValues: null, htmlAttributes: new { id = "registerLink" })</li>
-        <li>@Html.ActionLink("Log in", "Login", "Account", routeValues: null, htmlAttributes: new {id = "loginLink"})</li>
+        <li>@Html.ActionLink("Register", "Register", "Account", null, new {id = "registerLink"})</li>
+        <li>@Html.ActionLink("Log in", "Login", "Account", null, new {id = "loginLink"})</li>
     </ul>
 }
 
