--- a/Task05_MVC/UserStore.WebUI/Views/Home/Index.cshtml
+++ b/Task05_MVC/UserStore.WebUI/Views/Home/Index.cshtml
@@ -13,7 +13,7 @@
     <div class="row">
         <div class="col-md-4">
             <h2>Orders</h2>
-            <img src="~/Images/OrdersIcon.png" alt="Order" height="150" width="150"/>
+            <img src="~/Images/OrdersIcon.png" class="img-responsive" alt="Order"/>
             <p>
                 See our managers orders list
             </p>
@@ -21,7 +21,7 @@
         </div>
         <div class="col-md-4">
             <h2>Charts</h2>
-            <img src="~/Images/Chart.png" alt="Chart" height="150" width="250"/>
+            <img src="~/Images/Chart.png" class="img-responsive" alt="Chart"/>
             <p>
                 See our managers efficiency work
             </p>
@@ -29,7 +29,7 @@
         </div>
         <div class="col-md-4">
             <h2>About project</h2>
-            <img src="~/Images/InfoIcon.png" alt="Info" height="150" width="150"/>
+            <img src="~/Images/InfoIcon.png" class="img-responsive" alt="Info"/>
             <p>
                 See more info about project
             </p>
