--- a/Task05_MVC/UserStore.WebUI/Views/Shared/_LoginPartial.cshtml
+++ b/Task05_MVC/UserStore.WebUI/Views/Shared/_LoginPartial.cshtml
@@ -7,10 +7,13 @@
         @Html.AntiForgeryToken()
 
         <ul class="nav navbar-nav navbar-right">
-            <li>
-                @Html.ActionLink("Hello, " + User.Identity.GetUserName() + "!", "Index", "Admin", null, new {title = "Manage"})
+            <li class="dropdown">
+                <a class="dropdown-toggle" data-toggle="dropdown" href="Admin/Index">
+                    Hello, @User.Identity.GetUserName()!<span class="caret"></span></a>
+                <ul class="dropdown-menu">
+                    <li><a href="javascript:document.getElementById('logoutForm').submit()">Log out</a></li>
+                </ul>
             </li>
-            <li><a href="javascript:document.getElementById('logoutForm').submit()">Log out</a></li>
         </ul>
     }
 }
