--- a/Task05_MVC/UserStore.WebUI/Views/Home/Chart.cshtml
+++ b/Task05_MVC/UserStore.WebUI/Views/Home/Chart.cshtml
@@ -8,12 +8,17 @@
     <script type="text/javascript">
         google.charts.load('current', { 'packages': ['bar'] });
 
-        function onButtonClick() {
+        function onDrawBarButtonClick() {
+            var $btn = $(this);
+            $btn.button('loading');
+            setTimeout(function () {
+                $btn.button('reset');
+            }, 1000);
             var actionUrl = '@Url.Action("GetManagersData", "Home")';
-            $.getJSON(actionUrl, drawChart);
+            $.getJSON(actionUrl, drawBarChart);
         }
 
-        function drawChart(response) {
+        function drawBarChart(response) {
             var objs = [];
             objs.push(['Manager', 'Orders count', 'Total price']);
 
@@ -39,7 +44,12 @@
 </head>
 
 <body>
-    <input type="button" id="chartBuilder" class="btn btn-success" value="Build chart" onclick="onButtonClick()"/>
+    <div>
+        <button type="button" class="btn btn-primary"
+                id="button"
+                data-loading-text="<i class='fa fa-circle-o-notch fa-spin'></i> Processing..."
+                onclick="onDrawBarButtonClick()">Draw bar</button>
+    </div>
     <div id="columnchart_material" style="width: 800px; height: 500px;"></div>
 </body>
 
