--- a/Task05_MVC/UserStore.WebUI/Views/Home/Orders.cshtml
+++ b/Task05_MVC/UserStore.WebUI/Views/Home/Orders.cshtml
@@ -3,6 +3,46 @@
     ViewBag.Title = "List of orders";
 }
 
+<head>
+    <style>
+        #topBtn {
+            display: none;
+            position: fixed;
+            bottom: 20px;
+            right: 30px;
+            z-index: 99;
+            border: none;
+            outline: none;
+            background-color: red;
+            color: white;
+            cursor: pointer;
+            padding: 15px;
+            border-radius: 10px;
+        }
+
+        #topBtn:hover {
+            background-color: #555;
+        }
+    </style>
+    
+    <script type="text/javascript">
+        window.onscroll = function () { scrollFunction() };
+
+        function scrollFunction() {
+            if (document.body.scrollTop > 20 || document.documentElement.scrollTop > 20) {
+                document.getElementById("topBtn").style.display = "block";
+            } else {
+                document.getElementById("topBtn").style.display = "none";
+            }
+        }
+        
+        function topFunction() {
+            document.body.scrollTop = 0; // For Chrome, Safari and Opera 
+            document.documentElement.scrollTop = 0; // For IE and Firefox
+        }
+    </script>
+</head>
+
 <form method="get">
     <div class="form-inline">
         <div class="form-group">
@@ -42,3 +82,5 @@
 <form class="form-group">
     @Html.Partial("OrdersSummary", Model.Orders)
 </form>
+
+<button onclick="topFunction()" id="topBtn" title="Go to top">Top</button>
