--- a/Task05_MVC/UserStore.WebUI/Views/Manager/Index.cshtml
+++ b/Task05_MVC/UserStore.WebUI/Views/Manager/Index.cshtml
@@ -2,25 +2,55 @@
 @using PagedList.Mvc;
 
 @{
-    ViewBag.Title = "Orders";
+    ViewBag.Title = "Managers";
 }
 
-<a class="btn btn-success" href="/Manager/Create/">Create</a>
+<head>
+    <style>
+        input[type=text] {
+            width: 150px;
+            box-sizing: border-box;
+            border: 2px solid #ccc;
+            border-radius: 4px;
+            background-color: white;
+            background-image: url('../../Images/searchicon.png');
+            background-position: 2px 2px;
+            background-repeat: no-repeat;
+            padding: 12px 20px 12px 40px;
+            -webkit-transition: width 0.4s ease-in-out;
+            transition: width 0.4s ease-in-out;
+        }
 
-@using (Ajax.BeginForm("ManagerSearch", new AjaxOptions
-{
-    UpdateTargetId = "results",
-    LoadingElementId = "loading",
-    LoadingElementDuration = 500,
-    Confirm = "Execute AJAX-query?"
+        input[type=text]:focus {
+            width: 100%;
+        }
+    </style>
+</head>
 
-}))
-{
-    <div class="form-group">
-        <input type="text" placeholder="Manager name" name="name" class="form-control"/>
-        <input type="submit" class="btn btn-default" value="Search"/>
+<div class="row">
+    <div class="col-md-8">
+        <ul class="nav nav-pills nav-justified">
+            <li role="presentation"><a href="/Manager/Create">Create manager</a></li>
+            <li role="presentation"><a href="/Admin/Index">Users</a></li>
+            <li role="presentation"><a href="/Order/Index">Orders</a></li>
+            <li role="presentation"><a href="/Product/Index">Products</a></li>
+        </ul>
     </div>
-}
+    <div class="col-md-4">
+        @using (Ajax.BeginForm("ManagerSearch", new AjaxOptions
+        {
+            UpdateTargetId = "results",
+            LoadingElementId = "loading",
+            LoadingElementDuration = 500,
+
+        }))
+        {
+            <div class="form-inline">
+                <input type="text" placeholder="Manager name" name="name" class="form-control" />
+            </div>
+        }
+    </div>
+</div>
 
 <div id="loading" style="display: none; color: red; font-weight: bold">
     <p>loading...</p>
