--- a/Task05_MVC/UserStore.WebUI/Views/Product/ProductSearch.cshtml
+++ b/Task05_MVC/UserStore.WebUI/Views/Product/ProductSearch.cshtml
@@ -7,7 +7,7 @@
     </div>
     <table class="table table-striped">
         <tr>
-            <th>Name</th>
+            <th>Product name</th>
             <th>Price</th>
             <th></th>
             <th></th>
