--- a/Task05_MVC/UserStore.WebUI/Views/Shared/_Layout.cshtml
+++ b/Task05_MVC/UserStore.WebUI/Views/Shared/_Layout.cshtml
@@ -8,6 +8,43 @@
     @Scripts.Render("~/scripts/jquery.unobtrusive-ajax.min.js")
     @Styles.Render("~/Content/css")
     @Scripts.Render("~/bundles/modernizr")
+    <style>
+        #topBtn {
+            display: none;
+            position: fixed;
+            bottom: 20px;
+            right: 30px;
+            z-index: 99;
+            border: none;
+            outline: none;
+            background-color: red;
+            color: white;
+            cursor: pointer;
+            padding: 15px;
+            border-radius: 10px;
+        }
+
+        #topBtn:hover {
+            background-color: #555;
+        }
+    </style>
+    <script type="text/javascript">
+        window.onscroll = function () { scrollFunction() };
+
+        function scrollFunction() {
+            if (document.body.scrollTop > 20 || document.documentElement.scrollTop > 20) {
+                document.getElementById("topBtn").style.display = "block";
+            } else {
+                document.getElementById("topBtn").style.display = "none";
+            }
+        }
+
+        function topFunction() {
+            document.body.scrollTop = 0; // For Chrome, Safari and Opera
+            document.documentElement.scrollTop = 0; // For IE and Firefox
+        }
+    </script>
+
 </head>
 <body>
     <div class="navbar navbar-inverse navbar-fixed-top">
@@ -35,12 +72,13 @@
     <div class="container body-content">
         @RenderBody()
         <hr />
-        <footer>
-            <p>&copy; @DateTime.Now.Year - Arseni Barsegyan, EPAM training spring 2017</p>
+        <footer class="container-fluid text-center">
+            <p>&copy; Arseni Barsegyan, EPAM training spring, @DateTime.Now.Year</p>
         </footer>
     </div>
     @Scripts.Render("~/bundles/jquery")
     @Scripts.Render("~/bundles/bootstrap")
-    @RenderSection("scripts", required: false)
+    @RenderSection("scripts", false)
+    <button onclick="topFunction()" id="topBtn" title="Go to top">Top</button>
 </body>
 </html>
