Img size updated

--- a/Task05_MVC/UserStore.WebUI/Views/Home/Index.cshtml
+++ b/Task05_MVC/UserStore.WebUI/Views/Home/Index.cshtml
@@ -20,7 +20,7 @@
         </div>
         <div class="col-md-4">
             <h2>Charts</h2>
-            <img src="~/Images/Charts.png" class="img-responsive" alt="Charts"/>
+            <img src="~/Images/Charts.png" width="150" height="120" alt="Charts"/>
             <p>
                 See our managers efficiency work
             </p>
