--- a/Task05_MVC/UserStore.WebUI/Views/Home/Chart.cshtml
+++ b/Task05_MVC/UserStore.WebUI/Views/Home/Chart.cshtml
@@ -9,21 +9,16 @@
         google.charts.load('current', { 'packages': ['bar'] });
 
         function onDrawBarButtonClick() {
-            var $btn = $(this);
-            $btn.button('loading');
-            setTimeout(function () {
-                $btn.button('reset');
-            }, 1000);
             var actionUrl = '@Url.Action("GetManagersData", "Home")';
             $.getJSON(actionUrl, drawBarChart);
         }
 
         function drawBarChart(response) {
             var objs = [];
-            objs.push(['Manager', 'Orders count', 'Total price']);
+            objs.push(['Manager', 'Orders count']);
 
             for (var i = 0; i < response.length; i++) {
-                var obj = [response[i].Name, response[i].OrdersCount, response[i].TotalPrice];
+                var obj = [response[i].Name, response[i].OrdersCount];
                 objs.push(obj);
             }
 
@@ -45,10 +40,7 @@
 
 <body>
     <div>
-        <button type="button" class="btn btn-primary"
-                id="button"
-                data-loading-text="<i class='fa fa-circle-o-notch fa-spin'></i> Processing..."
-                onclick="onDrawBarButtonClick()">Draw bar</button>
+        <button type="button" class="btn btn-primary" onclick="onDrawBarButtonClick()">Draw bar</button>
     </div>
     <div id="columnchart_material" style="width: 800px; height: 500px;"></div>
 </body>
