--- a/Task05_MVC/UserStore.WebUI/Views/Home/Chart.cshtml
+++ b/Task05_MVC/UserStore.WebUI/Views/Home/Chart.cshtml
@@ -9,24 +9,24 @@
         google.charts.load('current', { 'packages': ['bar'] });
 
         function onDrawBarButtonClick() {
-            var actionUrl = '@Url.Action("GetManagersData", "Home")';
+            var actionUrl = '@Url.Action("GetYearsData", "Home")';
             $.getJSON(actionUrl, drawBarChart);
         }
 
         function drawBarChart(response) {
             var objs = [];
-            objs.push(['Manager', 'Orders count']);
+            objs.push(['Year', 'Orders count', 'Total price']);
 
             for (var i = 0; i < response.length; i++) {
-                var obj = [response[i].Name, response[i].OrdersCount];
+                var obj = [response[i].Year, response[i].OrdersCount, response[i].TotalPrice];
                 objs.push(obj);
             }
             var data = google.visualization.arrayToDataTable(objs);
 
             var options = {
                 chart: {
-                    title: 'Order details',
-                    subtitle: 'Orders amount',
+                    title: 'Orders by years',
+                    subtitle: 'Orders amount and total price'
                 }
             };
 
