--- a/Task05_MVC/UserStore.WebUI/Views/Home/Index.cshtml
+++ b/Task05_MVC/UserStore.WebUI/Views/Home/Index.cshtml
@@ -2,37 +2,54 @@
     ViewBag.Title = "Index";
 }
 
-<div class="container">
-    <div class="jumbotron">
-        <h1>Managers System</h1>
-        <p>
-            This is a test website created by Arseni Barsegyan
-        </p>
-    </div>
+<head>
+    <style>
+        .jumbotron {
+            background-color: #ff6347; /* Orange */
+            color: #ffffff;
+        }
+
+         .logo {
+             font-size: 150px;
+         }
+
+        .container-fluid {
+            padding: 60px 50px;
+        }
+
+        .bg-grey {
+            background-color: #f6f6f6;
+        }
+    </style>
+</head>
+
+<div class="jumbotron text-center">
+    <h1>Manager System</h1>
+    <p>We sell all</p>
+</div>
+
+<div class="container-fluid">
     <div class="row">
-        <div class="col-md-4">
-            <h2>Orders</h2>
-            <img src="~/Images/OrdersIcon.png" width="100" height="100" alt="Order"/>
-            <p>
-                See our managers orders list
-            </p>
-            <p><a class="btn btn-default" href="/Home/Orders">Search &raquo;</a></p>
+        <div class="col-sm-8">
+            <h2>Sell details</h2>
+            <h4>See our managers sell details</h4>
+            <a class="btn btn-default" href="/Home/Orders">Orders</a>
         </div>
-        <div class="col-md-4">
+        <div class="col-sm-4">
+            <span class="glyphicon glyphicon-usd logo"></span>
+        </div>
+    </div>
+</div>
+
+<div class="container-fluid bg-grey">
+    <div class="row">
+        <div class="col-sm-4">
+            <span class="glyphicon glyphicon-signal logo"></span>
+        </div>
+        <div class="col-sm-8">
             <h2>Charts</h2>
-            <img src="~/Images/Charts.png" width="150" height="120" alt="Charts"/>
-            <p>
-                See our managers efficiency work
-            </p>
-            <p><a class="btn btn-default" href="/Home/Chart">View charts &raquo;</a></p>
-        </div>
-        <div class="col-md-4">
-            <h2>About project</h2>
-            <img src="~/Images/InfoIcon.png" width="100" height="100" alt="Info"/>
-            <p>
-                See more info about project
-            </p>
-            <p><a class="btn btn-default" href="/Home/Index">Learn more &raquo;</a></p>
+            <h4>See our managers efficiency with help of charts</h4>
+            <a class="btn btn-default" href="/Home/Chart">Charts</a>
         </div>
     </div>
 </div>
