--- a/Task05_MVC/UserStore.WebUI/Views/Shared/_Layout.cshtml
+++ b/Task05_MVC/UserStore.WebUI/Views/Shared/_Layout.cshtml
@@ -3,7 +3,7 @@
 <head>
     <meta charset="utf-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>@ViewBag.Title - My ASP.NET Application</title>
+    <title>@ViewBag.Title - Manager System</title>
     @Scripts.Render("~/scripts/jquery-1.10.2.min.js")
     @Scripts.Render("~/scripts/jquery.unobtrusive-ajax.min.js")
     @Styles.Render("~/Content/css")
