--- a/Task05_MVC/UserStore.WebUI/Views/Shared/_LoginPartial.cshtml
+++ b/Task05_MVC/UserStore.WebUI/Views/Shared/_LoginPartial.cshtml
@@ -11,6 +11,7 @@
                 <a class="dropdown-toggle" data-toggle="dropdown" href="Admin/Index">
                     Hello, @User.Identity.GetUserName()!<span class="caret"></span></a>
                 <ul class="dropdown-menu">
+                    <li>@Html.ActionLink("Admin panel", "Index", "Admin", null, new {id = "adminLink"})</li>
                     <li><a href="javascript:document.getElementById('logoutForm').submit()">Log out</a></li>
                 </ul>
             </li>
