--- a/WebApplication_JQuery_Bootstrap/WebApplication_JQuery_Bootstrap/Views/Home/About.cshtml
+++ b/WebApplication_JQuery_Bootstrap/WebApplication_JQuery_Bootstrap/Views/Home/About.cshtml
@@ -1,7 +1,38 @@
 ﻿@{
     ViewBag.Title = "About";
 }
-<h2>@ViewBag.Title.</h2>
-<h3>@ViewBag.Message</h3>
 
-<p>Use this area to provide additional information.</p>
+<script src="~/Scripts/jquery-3.1.1.min.js"></script>
+
+<a class="btn btn-default" id="colorGreenButton">green color</a>
+<a class="btn btn-default" id="colorRedButton">red color</a>
+
+<div id="menu">
+    <a class="btn btn-default" id="buildTableButton">build table</a>
+    <a class="btn btn-default" id="addRowButton">add row to table</a>
+    <a class="btn btn-default" id="deleteTableButton">delete table</a>
+</div>
+
+<div id="tablePlace">
+    <table class="table">
+        <tr><td>Слово</td><td>Перевод</td></tr>
+        <tr><td><a id="link" href="Home/Index.cshtml">Index</a> Cabbage</td><td>Капуста</td></tr>
+        <tr><td>Carrot</td><td>Морковь</td></tr>
+        <tr><td>Potato</td><td>Картофель</td></tr>
+        <tr><td>Tomato</td><td>Помидор</td></tr>
+    </table>
+</div>
+
+
+<script type="text/javascript">
+    $(document).ready(function () {
+        $("#colorRedButton").click(function() {
+            $(this).css('background-color', 'red');
+        });
+        $("#colorGreenButton").click(function () {
+            $(this).css('background-color', 'green');
+        });
+        var num = $("tr:even:has('a')").length;
+        console.log(num);
+    });
+</script>
