--- a/SimpleMembershipApp/SimpleMembershipApp/Views/Account/Manage.cshtml
+++ b/SimpleMembershipApp/SimpleMembershipApp/Views/Account/Manage.cshtml
@@ -3,30 +3,11 @@
     ViewBag.Title = "Manage Account";
 }
 
-<hgroup class="title">
-    <h1>@ViewBag.Title.</h1>
-</hgroup>
-
-<p class="message-success">@ViewBag.StatusMessage</p>
-
-<p>You're logged in as <strong>@User.Identity.Name</strong>.</p>
-
-@if (ViewBag.HasLocalPassword)
-{
-    @Html.Partial("_ChangePasswordPartial")
-}
-else
-{ 
-    @Html.Partial("_SetPasswordPartial")
-}
-
-<section id="externalLogins">
-    @Html.Action("RemoveExternalLogins")
-
-    <h3>Add an external login</h3>
-    @Html.Action("ExternalLoginsList", new { ReturnUrl = ViewBag.ReturnUrl })
-</section>
-
-@section Scripts {
-    @Scripts.Render("~/bundles/jqueryval")
-}
+<table class="table table-hover">
+    <tr>
+        <th><a>Upload</a></th>
+        <th><a>Folder</a></th>
+        <th><a>Delete</a></th>
+        <th><a>Rename</a></th>
+    </tr>
+</table>
