--- a/SimpleMembershipApp/SimpleMembershipApp/Views/Shared/_Layout.cshtml
+++ b/SimpleMembershipApp/SimpleMembershipApp/Views/Shared/_Layout.cshtml
@@ -34,7 +34,7 @@
     @RenderBody()
     <hr/>
     <footer>
-        <p>&copy; Arseni Barsegyan, test task, @DateTime.Now.Year</p>
+        <p>&copy; CloudBox, @DateTime.Now.Year</p>
     </footer>
 </div>
 @Scripts.Render("~/bundles/jquery")
