--- a/TestUpload/TestUpload/Views/Home/Index.cshtml
+++ b/TestUpload/TestUpload/Views/Home/Index.cshtml
@@ -3,35 +3,42 @@
 }
 
 <div>
-    <h2>Directories</h2>
-    <div id="currentPath">@ViewBag.CurrentPath</div>
-    <button id="linkToPrevPath" class="btn btn-default">...</button>
-    <table class="table-hover" id="resultTable">
-        <tr>
-            <th>Some functions</th>
-        </tr>
-        @foreach (var directory in ViewBag.Directories)
-        {
-            <tr>
-                <td id="@directory" onclick="appendFolderNameToFullPath(@directory)">@directory</td>
-            </tr>
-
-        }
-        @foreach (var file in ViewBag.Files)
-        {
-            <tr>
-                <td><a href="~/Files/SuperMan/@file">@file</a></td>
-            </tr>
-        }
-    </table>
+    <p id="text">superfolder\</p>
+    <input type="file" name="upload" id="uploadFile"/><br/>
+    <button id="submit">Загрузить</button>
 </div>
 
-<script type="text/javascript">
-    function appendFolderNameToFullPath(name) {
-        $("#currentPath").append(name);
-        $.ajax({
-            url: "@Url.Action("Index", "Home")",
+@section scripts{
+    <script type="text/javascript">
 
-        });
-    }
-</script>
+    $('#submit').on('click', function (e) {
+        e.preventDefault();
+        var files = document.getElementById('uploadFile').files;
+        if (files.length > 0) {
+            if (window.FormData !== undefined) {
+                var data = new FormData();
+                for (var x = 0; x < files.length; x++) {
+                    data.append("file" + x, files[x]);
+                }
+                data.append("path", "SuperMan/");
+
+                $.ajax({
+                    type: "POST",
+                    url: '@Url.Action("Upload", "Home")',
+                    contentType: false,
+                    processData: false,
+                    data: data,
+                    success: function (result) {
+                        alert(result);
+                    },
+                    error: function (xhr, status, p3) {
+                        alert(xhr.responseText);
+                    }
+                });
+            } else {
+                alert("Браузер не поддерживает загрузку файлов HTML5!");
+            }
+        }
+    });
+    </script>
+}
